--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -10,20 +10,14 @@
 
     {% include navigation.html %}
 
-    <section id="post" class="container content-section text-center">
+    <section id="post" class="container content-section text-left">
       <div class="row">
         <div class="col-md-10 col-md-offset-1">
-
-          {% include swipe-instructions.html %}
 
           <h1><strong>{{ page.title }}</strong></h1>
           <h4>
             <strong>{{ page.date | date_to_string }}</strong>
             <small>
-              . category:
-              <a class="category" href="{{site.baseurl}}/categories/{{page.category | downcase}}.html">
-                {{ page.category }}
-              </a>.
               <br />
               {% for tag in page.tags %}
                 <a class="tag" href="{{site.baseurl}}/tags/{{tag}}.html">#{{ tag }}</a>
@@ -33,13 +27,10 @@
 
           {{ page.content | markdownify }}
 
-          {% include share.html %}
-
           <hr />
 
           {% if site.author_blurb %}
           <div class="author row">
-            <img class="col-xs-4 col-sm-3 col-md-2" src="{{site.baseurl}}{{site.author_blurb_image}}" alt="Me" />
             <p class="col-xs-8 col-sm-9 col-md-10">
               {{ site.author_blurb }}
             </p>
